--- a/styles.css
+++ b/styles.css
@@ -21,8 +21,8 @@ h1{
     gap: 20px;
 }
 .country-div{
-    background: #c5e7f5;
-    border: 1px solid burlywood;
+    background: white;
+    border: 1px solid black;
     padding: 15px;
 }
 img{
